doc/api_assets/style.css
/* ... */
.dark-mode a code {
  color: var(--green3);
}

/*--------------------- Layout and Typography ----------------------------*/
html {
  font-size: 1rem;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-variant-ligatures: none;
          font-variant-ligatures: none;
}

* {
  box-sizing: border-box;
}

body {
  font-family: Lato, "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Verdana, Tahoma, sans-serif;
  margin: 0;
  padding: 0;
  color: var(--color-text-primary);
  background-color: var(--color-fill-app);
}

h1, h1 code { font-size: 2.5rem; }
h2, h2 code { font-size: 2rem; }
h3, h3 code { font-size: 1.75rem; }
h4, h4 code { font-size: 1.5rem; }
h5, h5 code { font-size: 1.25rem; }
h6, h6 code { font-size: 1rem; }

h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: 700;
  line-height: inherit;
  position: relative;
  margin: 1.5rem 0 1rem;
  text-rendering: optimizeLegibility;
}

h1 code,
h2 code,
h3 code,
h4 code,
h5 code,
h6 code {
  color: inherit;
  font-family: inherit;
}

pre,
tt,
code,
.pre,
span.type,
a.type {
  font-family: SFMono-Regular, Menlo, Consolas, "Liberation Mono", "Courier New", monospace;
  font-size: .9em;
}

#content {
  position: relative;
}

a:link,
a:active,
a:visited {
  color: var(--color-links);
  border-radius: 2px;
  padding: 1px 3px;
}

a:hover,
a:focus {
  color: var(--white);
  background-color:var(--green1);
  outline: none;
}

strong {
  font-weight: 700;
}

code a:hover {
  background-color: transparent;
}

em code {
  font-style: normal;
}

#changelog #gtoc {
  display: none;
}

#gtoc {
  margin-top: .5rem;
  margin-bottom: 1rem;
}

#gtoc > ul {
  list-style: none;
  margin-left: 0;
  line-height: 1.5rem;
}

.critical, .critical code {
  color: var(--color-critical);
}

li.picker-header {
  position: relative;
}

li.picker-header .collapsed-arrow, li.picker-header .expanded-arrow {
  width: 1.5ch;
  height: 1.5em;
}

li.picker-header .collapsed-arrow {
  display: inline-block;
}

li.picker-header .expanded-arrow {
  display: none;
}

li.picker-header.expanded .collapsed-arrow, 
:root:not(.has-js) li.picker-header:hover .collapsed-arrow {
  display: none;
}

li.picker-header.expanded .expanded-arrow, 
:root:not(.has-js) li.picker-header:hover .expanded-arrow {
  display: inline-block;
}

li.picker-header.expanded > a,
:root:not(.has-js) li.picker-header:hover > a {
  border-radius: 2px 2px 0 0;
}

li.picker-header.expanded > .picker, 
:root:not(.has-js) li.picker-header:hover > .picker {
  display: block;
  z-index: 1;
}

li.picker-header a span {
  font-size: .7rem;
}

.picker {
  background-color: var(--color-fill-app);
  border: 1px solid var(--color-brand-secondary);
  border-radius: 0 0 2px 2px;
  display: none;
  list-style: none;
  position: absolute;
  left: 0;
  top: 100%;
  width: max-content;
  min-width: min(300px, 75vw);
  max-width: 75vw;
  max-height: min(600px, 60vh);
  overflow-y: auto;
}

.picker > ul, .picker > ol {
  list-style: none;
  margin-left: 0;
  line-height: 1.5rem;
}

.picker li {
  display: block;
  border-right: 0;
  margin-right: 0;
}

.picker li a {
  border-radius: 0;
  display: block;
  margin: 0;
  padding: .1rem;
  padding-left: 1rem;
}

.picker li a.active,
.picker li a.active:hover,
.picker li a.active:focus {
  font-weight: 700;
}

.picker li:last-child a {
  border-bottom-right-radius: 1px;
  border-bottom-left-radius: 1px;
}

.gtoc-picker-header {
  display: none;
}

.line {
  width: calc(100% - 1rem);
  display: block;
  padding-bottom: 1px;
}

.picker .line {
  margin: 0;
  width: 100%;
}

.api_stability {
  color: var(--white) !important;
  margin: 0 0 1rem;
  padding: 1rem;
  line-height: 1.5;
}

.api_stability * {
  color: var(--white) !important;
}

.api_stability a {
  text-decoration: underline;
}

.api_stability a:hover,
.api_stability a:active,
.api_stability a:focus {
  background-color: var(--background-color-api-stability-link);
}

.api_stability a code {
  background-color: transparent;
}

.api_stability_0 {
  background-color: var(--red1);
}

.api_stability_1 {
  background-color: var(--red3);
}

.api_stability_2 {
  background-color: var(--green2);
}

.api_stability_3 {
  background-color: var(--blue1);
}

.module_stability {
  vertical-align: middle;
}

.api_metadata {
  font-size: .85rem;
  margin-bottom: 1rem;
}

.api_metadata span {
  margin-right: 1rem;
}

.api_metadata span:last-child {
  margin-right: 0;
}

ul.plain {
  list-style: none;
}

abbr {
  border-bottom: 1px dotted #454545;
}

p {
  text-rendering: optimizeLegibility;
  margin: 0 0 1.125rem;
  line-height: 1.5;
}

#apicontent > *:last-child {
  margin-bottom: 0;
  padding-bottom: 2rem;
}

table {
  border-collapse: collapse;
  margin: 0 0 1.5rem;
}

th,
td {
  border: 1px solid #aaa;
  padding: .5rem;
  vertical-align: top;
}

th {
  text-align: left;
}

td {
  word-break: break-all; /* Fallback if break-word isn't supported */
  word-break: break-word;
}

@media only screen and (min-width: 600px) {
  th,
  td {
    padding: .75rem 1rem;
  }

  td:first-child {
    word-break: normal;
  }
}

ol,
ul,
dl {
  margin: 0 0 .6rem;
  padding: 0;
}

ol ul,
ol ol,
ol dl,
ul ul,
ul ol,
ul dl,
dl ul,
dl ol,
dl dl {
  margin-bottom: 0;
}

ul,
ol {
  margin-left: 2rem;
}

dl dt {
  position: relative;
  margin: 1.5rem 0 0;
}

dl dd {
  position: relative;
  margin: 0 1rem;
}

dd + dt.pre {
  margin-top: 1.6rem;
}

#apicontent {
  padding-top: 1rem;
}

#apicontent section {
  content-visibility: auto;
  contain-intrinsic-size: 1px auto 5000px;
}

#apicontent .line {
  width: calc(50% - 1rem);
  margin: 1rem 1rem .95rem;
  background-color: #ccc;
}

h2 + h2 {
  margin: 0 0 .5rem;
}

h3 + h3 {
  margin: 0 0 .5rem;
}

h2,
h3,
h4,
h5 {
  position: relative;
  padding-right: 40px;
}

.srclink {
  float: right;
  font-size: smaller;
  margin-right: 30px;
}

h1 span,
h2 span,
h3 span,
h4 span {
  position: absolute;
  display: block;
  top: 0;
  right: 0;
}
/* ... */

